--- a/src/App.css
+++ b/src/App.css
@@ -277,3 +277,9 @@
     flex-direction: column;
   }
 }
+/* @media only screen and (max-width: 800px) {
+  .app {
+    height: auto;
+    flex-direction: column;
+  }
+} */
